src/App.css
/* ... */
.linkItemIcon {
  margin-right: 4px;
}
.linkItem :hover {
  color: var(--primary-hover-text-color);
}

.AppContent {
  flex: 1 1 auto;
  display: flex;
  gap: 12px;
  padding: 1%;
  position: relative;
  overflow:hidden;
  padding-bottom: 12px;
}
.extras {

  flex-direction: row;
  margin-right: 16px;
  align-content: center;

  transition: width, left, right, 0.3s;
}
.darkModeBtn {
  background-color: var(--dark-mode-background-color) !important;
  color: var(--dark-mode-text-color) !important;
}
.extraBtn {
  background-color: var(--button-background-color);
  color: var(--button-text-color);
  margin-left: 8px;
  height:40px;
  width: 40px;
  line-height: 44px;
  font-size: 18px;
  text-align: center;
  border: 0;
  border-radius: 20px;
  outline: none;
  cursor: pointer;
  position: relative;
  display: inline-flex;
  align-items: center;
  justify-content: center;
}
.extraTextBtn {
  padding: 0 16px;
  width: auto;
  min-width: 40px;
  font-weight: bold;
}
.extraTextBtnIcon {
  margin-right: 4px;
  transition: color 400ms,transform .1s;
}
.extraTextBtn:hover .extraTextBtnIcon {
  color: red;
  transform: scale(1.2);
}

.badgeCount {
  width: 20px;
  height: 20px;
  background: #ef0808;
  border-radius: 100px;
  font-size: 13px;
  font-weight: 500;
  display: block;
  line-height: 20px;
  color: white;
  position: absolute;
  right: -4px;
  bottom: -6px;
}

.AppName{
  color: var(--app-name-text-color);
  text-align: left;
}

.logo {
  position: relative;
  top: 4px;
  margin-right: 4px;
  font-size: 24px;
}
.logoText {
  height: 16px;
  width: auto;
  fill: var(--app-name-text-color)
}
.cards {
  display:flex;
  align-items: flex-start;
  flex-direction: row;
  flex-wrap: wrap;

}

.block {
  background-color: var(--card-background-color);
  border-radius: 10px;
  overflow: hidden;
  flex-direction: column;
  height: 78vh;
  width: 10vw;
  flex: 0 0 auto;
}
.blockContent {
  flex-grow: 1;
  overflow-y: auto;
  height: calc(80vh - 1% - 16px - 30px);
  display: flex;
  flex-direction: column;
  overflow-x: hidden;
}

.scrollable {
  scrollbar-color: var(--scrollbar-accent-color) var(--scrollbar-background-color);
  scrollbar-width: thin;
}

.scrollable::-webkit-scrollbar {
  width: 6px;
  height: 6px;
}

.scrollable::-webkit-scrollbar-track-piece  {
  background-color: var(--scrollbar-background-color);
}

.scrollable::-webkit-scrollbar-thumb:vertical {
  border-radius: 6px;
  background-color: var(--scrollbar-accent-color);
}

.scrollable::-webkit-scrollbar-thumb:horizontal {
  border-radius: 6px;
  background-color: var(--scrollbar-accent-color);
}

.dark .block{
  border: 1px solid var(--card-border-color);
}
.light .block {
  box-shadow: 0 0 20px var(--card-border-color);
}

.blockHeader {
  text-align: center;
  vertical-align: baseline;
  background: var(--card-header-background-color);
  color: var(--card-header-text-color);
  font-weight: 400;
  height: 30px;
  font-size: 16px;
  padding-top: 16px;
  padding-bottom: 16px;
  cursor: pointer;
}
.blockHeader:hover .blockHeaderLink{
  opacity: 1;
}
.blockHeaderLink {
  display: inline-block;
  margin-left: 8px;
  color: #96a2ae;
  vertical-align: middle;
  opacity: 0;
  transition:opacity 0.2s linear;
}
.blockHeaderIcon {
  position: relative;
  top: 4px;
  margin-right: 6px;
}
.blockHeaderIcon img {
  width: 18px;
  height: 18px;
}

.blockRow {
  padding: 8px 16px;
  position: relative;
}

/* Actions */
.blockActions {
  position: absolute;
  transition: right .2s ease;
  top:0;
  right :-100%;
  background: linear-gradient(to right, transparent, var(--card-actions-background-shadow));
  height: 100%;
  width: 26%;
  justify-content: flex-end;
  align-items: flex-end;
  display: flex;
}
.blockActions.active {
  right:0;
}

.blockRow:hover .blockActions {
  right:0;
}
.blockActionButton.active {
  background-color: var(--card-active-action-button-background);
  color: var(--card-active-action-button-color);
}
.blockActionButton {
  margin: 16px;
  width: 28px;
  height: 28px;
  border: none;
  border-radius: 40px;
  display: block;
  text-align: center;
  background-color: var(--card-action-button-background);
  color: var(--card-action-button-color);
  line-height: 12px;
  cursor: pointer;
  padding: 0;
}


.blockRow:hover {
  background-color: var(--card-background-focus-color);
}

.bookmarkBtnWrapper {
  display: flex;
  align-items: center;
  padding-left: 4;
  padding-right: 4;
}

.bookmarkBtn {
  /* visibility: hidden; */
  cursor: pointer;
}

.bookmarkBtn.active {
  color: #3572a5
}


.blockRow:hover .bookmarkBtn {
  visibility: visible;
}

.blockContent > div > div > div:not(:last-child), .blockRow:not(:last-child) {
  border-bottom: 1px solid var(--card-content-divider);
}

.rowTitle {
  color: var(--primary-text-color);
  margin:0;
  padding:0;
  font-size: 16px;
  text-decoration: none;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}
.rowTitle:hover {
  color: var(--primary-hover-text-color);
}

.dark .blockHeaderWhite {
  color: white
}
.light .blockHeaderWhite {
  color: black
}
.githubTitle {
  color: #0366d6;
}

.rowDescription {
  padding:0;
  margin:0;
  color: var(--secondary-text-color);
  margin-top: 8px;
  display: block;
  font-size: 14px;
}
.rowDetails {
  display: block;
  margin:0;
  margin-top: 8px;
  display: flex;
  flex-direction: row;
  align-items: center;
  flex-wrap: wrap;
}
.rowItemClickable {
  text-decoration: none;
}

.rowItem {
  color: #616970;
  margin-right: 16px;
  margin-bottom: 4px;
}
.rowDetails .rowItem {
  white-space: nowrap;
  font-size: 12px;
}
.rowDescription .rowItem {
  font-size: 12px;
}
.rowDetails .hnRowItem {
  color: #F6682F
}
.rowDetails .inRowItem {
  color: #4799EB
}
.rowDetails .redditRowItem {
  color: #FA481D;
}

.rowDetails .lobstersRowItem {
  color: #A91916
}

.rowItemIcon {
  position: relative;
  top: 1px;
}
.rowTitleIcon {
  position: relative;
  top: 3px;
  margin-right: 6px;
  color: #99A2AC
}

.break {
  flex-basis: 100%;
  height: 0;
}
/* ... */

